--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
 # UI Configurations
 TITLE = 'Azure Voting App'
 VOTE1VALUE = 'Chicken'
-VOTE2VALUE = 'Dogs'
+VOTE2VALUE = 'Duck'
 SHOWHOST = 'false'
